date 12-7-2017
-- tool.point.py --
Point and Vectors now have tup_int(), cast_int()

-- tool.gradient.py --
now handles pygame.Color
trims the fat off of list and tuples

-- widgets.textbox.py --
added ghost text

date 12-6-2017
-- tool.gradient.py --
added apply_surface function
update widgets.text.Text now uses apply_surface

-- simple_games.py --
fix intro exit bug
added Memory game
added Puzzle game

-- simple_games.py --
added class QuitScene